--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -8,20 +8,20 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
 </head>
 
-<body>
+<body class="p-3 mb-2 bg-warning-subtle text-emphasis-warning" >
 
     <nav class="navbar navbar-expand-lg bg-body-tertiary">
         <div class="container-fluid">
-          <a class="navbar-brand" href="#">Navbar</a>
+          <a class="navbar-brand text-primary" href="{{ url_for('index') }}">A Wonderous Task Manager</a>
           <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
           </button>
           <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
             <div class="navbar-nav">
 
-              <a class="nav-link" href="#">Home</a>
-              <a class="nav-link" href="#">Stuff</a>
-              <a class="nav-link" href="#">Things</a>
+              <a class="nav-link" href="{{ url_for('index') }}">Home</a>
+              <a class="nav-link" href="{{ url_for('show_tasks') }}">Task List</a>
+              <a class="nav-link" href="{{ url_for('new_task_form') }}">Create a New Task</a>
               
             </div>
           </div>
