--- a/app/templates/success.html
+++ b/app/templates/success.html
@@ -7,5 +7,5 @@
 {% block content %}
 <h1>Success</h1>
 <p> the mission was a success!</p>
-<a href="{{ url_for('index') }}">Click me!</a> to go home.
+<a href="{{ url_for('index') }}">Click here</a> to go home.
 {% endblock content %}
